# fov

./: .gitignore  Cargo.toml  README.md  package.json
.devcontainer/: Dockerfile  base.Dockerfile  devcontainer.json
crates/cbp_api/: Cargo.toml
crates/cbp_api/src/api/: mod.rs  models.rs  models_impls.rs  paths.rs
crates/coinbase-pro-api/: Cargo.toml
crates/coinbase-pro-api/src/: lib.rs
crates/coinbase-pro-api/src/api/: endpoints.rs  mod.rs
crates/coinbase-pro-api/src/api/models/: accounts.rs  mod.rs  products.rs
crates/coinbasepro_api/: Cargo.toml
crates/coinbasepro_api/src/: lib.rs
crates/coinbasepro_api/src/api/: models.rs  paths.rs
crates/coingecko_api/: Cargo.toml
crates/coingecko_api/src/api/: mod.rs  models.rs  paths.rs
crates/crypto_api/: Cargo.toml
crates/crypto_api/src/api/: mod.rs  models.rs  paths.rs
crates/dnb-api/: Cargo.toml
crates/nn_api/: Cargo.toml
crates/nn_api/src/api/: models.rs  paths.rs
crates/nordnet-api/: Cargo.toml
crates/nordnet-api/src/api/: mod.rs  schema.rs
crates/nordnet_api/: Cargo.toml
crates/nordnet_api/src/api/: mod.rs  paths.rs
crates/nownodes_api/: Cargo.toml
crates/nownodes_api/src/api/: models.rs  paths.rs
crates/nwn_api/: Cargo.toml
crates/nwn_api/src/api/: mod.rs  paths.rs
crates/sb1_api/: Cargo.toml
crates/sb1_api/src/: lib.rs
crates/sb1_api/src/api/: mod.rs  models.rs  models_impl.rs  paths.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/server/src/portfolio/: mod.rs  simple_account.rs
crates/server/src/server/: mod.rs  portfolio.rs
crates/server/src/server/portfolio/: asset.rs  assets.rs  cbp_assets.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: asset.rs  config.rs  lib.rs
crates/sparebank1-api/: Cargo.toml
crates/sparebank1-api/src/: lib.rs
crates/sparebank1-api/src/api/: mod.rs
crates/sparebank1-api/src/api/models/: accounts.rs
crates/sparebank1_api/: Cargo.toml
crates/sparebank1_api/src/api/: paths.rs
src/: config.toml  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/bindings/: coinbase_pro.rs  mod.rs  nordnet.rs  nownodes.rs  sparebank_1.rs
src-tauri/src/bindings/coinbase_pro/: mod.rs  models.rs  paths.rs
src-tauri/src/bindings/nordnet/: mod.rs
src-tauri/src/bindings/nownodes/: mod.rs  models.rs  paths.rs
src-tauri/src/bindings/sparebank_1/: mod.rs  models.rs  paths.rs
src-tauri/src/commands/: get_assets.rs  get_portfolio_names.rs  load_portfolio.rs  lock_portfolio.rs  mod.rs  new_portfolio.rs  save_portfolio.rs  set_config.rs  unlock_portfolio.rs  update_assets.rs
src-tauri/src/portfolio/: asset.rs  config.rs  mod.rs
src/portfolio/: mod.rs  simple_account.rs
src/www/: index.html  script.js  style.css
ui/: coinbase_pro.html  index.html  nownodes.html  script.js  sparebank_1.html  style.css
ui/css/: index.css  shared.css
ui/js/: coinbase_pro.js  index.js  isolation.js  nownodes.js  sparebank_1.js
