[package]
name = "fov"
version = "0.1.0"
description = "Overview of your portfolio"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
license = "MIT"
repository = "https://github.com/jonassterud/fov"
default-run = "fov"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.3", features = ["isolation"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.3", features = ["api-all", "isolation"] }
anyhow = "1.0.58"
reqwest = { version = "0.11.11", features = ["json"] }
toml = "0.5.9"
pwbox = "0.5.0"
rand = "0.8.5"
base64 = "0.13.0"
hmac = "0.12.1"
sha2 = "0.10.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
