[package]
name = "coinbase-pro-api"
version = "0.1.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
description = "Library to interact with the Coinbase Pro API"
repository = "https://github.com/jonassterud/fov"
license = "MIT"
edition = "2021"

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"
base64 = "0.13.0"
hmac = "0.12.1"
sha2 = "0.10.2"