[package]
name = "server"
version = "0.1.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
description = "API Server that combines data from coinbase-pro-api, nordnet-api and sparebank1-api"
repository = "https://github.com/jonassterud/fov"
license = "MIT"
edition = "2021"

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
warp = "0.3.2"
anyhow = "1.0.57"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sparebank1-api = { path = "../sparebank1-api" }
coinbase-pro-api = { path = "../coinbase-pro-api" }