[package]
name = "server"
version = "0.1.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
description = "Get an overview of your finances - server crate."
repository = "https://github.com/jonassterud/fov"
license = "MIT"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
coinbasepro_api = { path = "../coinbasepro_api" }
nordnet_api = { path = "../nordnet_api" }
sparebank1_api = { path = "../sparebank1_api" }
nownodes_api = { path = "../nownodes_api" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
warp = "0.3.2"
anyhow = "1.0.57"