[package]
name = "shared"
version = "0.1.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
description = "Get an overview of your finances - shared crate."
repository = "https://github.com/jonassterud/fov"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }