[package]
name = "shared"
version = "0.1.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
description = "Get an overview of your finances - shared crate."
repository = "https://github.com/jonassterud/fov"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"
toml = "0.5.9"
pwbox = "0.5.0"
rand = "0.8.5"